Ajout d'une Div et p avec du lorem15 dans le INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     On est pas content de faire GIT un lundi matin ...
 </div>
 
+<div class="">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio at quam eius! Reiciendis, blanditiis esse?</p>
+</div>
+
 </body>
 </html>
