Ajout d'une Div h1 et p dans le INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
     On est pas content de faire GIT un lundi matin ...
 </div>
 
+<!-- DESCRIPTION -->
 <div class="">
+    <h1>Ma Description</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio at quam eius! Reiciendis, blanditiis esse?</p>
+</div>
+<div class="">
+    <h1>Mes Récompenses</h1>
+    <p>en construction...</p>
 </div>
 
 </body>
