--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <h1>Mes Récompenses</h1>
     <p>en construction...</p>
 </div>
+<div class="">
+    <h1>La Récompense</h1>
+    <img src="/images/medal_bronze.png" alt="Médaille de bronze">
+</div>
 
 </body>
 </html>
