--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <h1>La Récompense</h1>
     <img src="/images/medal_bronze.png" alt="Médaille de bronze">
 </div>
-
+<!-- COMMANDES GITS -->
+<div class="">
+    <h1>Mes commandes gits</h1>
+    <p>Git Pull</p>
+</div>
 </body>
 </html>
